tests/language_modules/12_type_conflicts/valid/result_assignment_from_function.vf
module ResultAssignmentFromFunction

error NotFound

function load() returns Result<Integer, NotFound>
is
    return ok 1
end load

procedure main()
is
    let outcome: Result<Integer, NotFound> = load()
    check true
end main

end ResultAssignmentFromFunction