tests/language_modules/12_type_conflicts/invalid_semantics/record_function_name_collision.vf
module RecordFunctionNameCollision

type Account is record
    id: Integer
end record

function Account() returns Integer
is
    return 1
end Account

end RecordFunctionNameCollision